<resources>
    <string name="GMAPS_API_KEY">AIzaSyBRkbWxwrwIXj2R5QIG4N1N_Iu72LZ7ZG0</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="act_box_title">detalhes do box</string>
    <string name="act_class_title">classes</string>
    <string name="act_commenst_title">comentários</string>
    <string name="act_credit_card_delete_message">Deseja deletar cartão de crédito? A ação não poderá ser revertida</string>
    <string name="act_credit_card_delete_message_confirm">Cartão deletado com sucesso!</string>
    <string name="act_credit_card_max_credit_card">Nosso aplicativo permite até 3 cartões cadastrados. Se você já cadastrou os 3 cartões, será necessário remover um deles antes de adicionar um novo</string>
    <string name="act_credit_card_title">cartões de crédito</string>
    <string name="act_crop_image_title">selecione a imagem</string>
    <string name="act_likes_title">Likes</string>
    <string name="act_login_facebook">Entrar com o facebook</string>
    <string name="act_login_hint_email">E-mail*</string>
    <string name="act_login_hint_password">Senha*</string>
    <string name="act_login_login">Entrar</string>
    <string name="act_login_miss_password">Esqueci minha senha</string>
    <string name="act_login_msg_email_required">O campo e-mail é obrigatório</string>
    <string name="act_login_msg_password_required">O campo senha é obrigatório</string>
    <string name="act_login_msg_validfields_login">Opss!! Acho que você não preencheu o e-mail ou a senha</string>
    <string name="act_login_register">Criar nova conta</string>
    <string name="act_login_unauthorized">Você não tem permissão para acessar o aplicativo</string>
    <string name="act_miss_password_button">Enviar</string>
    <string name="act_miss_password_email">E-mail*</string>
    <string name="act_miss_password_label">Digite o seu e-mail e receber as instruções para alterar a senha.</string>
    <string name="act_miss_password_title">recuperar senha</string>
    <string name="act_new_credit_card_all_fields_required">Preencha todos os campos.</string>
    <string name="act_new_credit_card_belongs_to_another_user">O cartão pertence a outra pessoa</string>
    <string name="act_new_credit_card_cvv">CVV *</string>
    <string name="act_new_credit_card_cvv_required">CVV é obrigatório</string>
    <string name="act_new_credit_card_default">Salvar como Cartão Principal</string>
    <string name="act_new_credit_card_expiration">Validade *</string>
    <string name="act_new_credit_card_expiration_invalid">Campo de vailidade do cartão inválida, verifique o valor digitado.</string>
    <string name="act_new_credit_card_expiration_required">Validade é obrigatório</string>
    <string name="act_new_credit_card_holder_city">Cidade *</string>
    <string name="act_new_credit_card_holder_city_required">Cidade é obrigatório</string>
    <string name="act_new_credit_card_holder_cpf">CPF *</string>
    <string name="act_new_credit_card_holder_cpf_length">CPF não está completo</string>
    <string name="act_new_credit_card_holder_cpf_required">CPF é obrigatório</string>
    <string name="act_new_credit_card_holder_data">Dados do titular</string>
    <string name="act_new_credit_card_holder_district">Bairro*</string>
    <string name="act_new_credit_card_holder_district_required">Bairro é obrigatório</string>
    <string name="act_new_credit_card_holder_email">E-mail *</string>
    <string name="act_new_credit_card_holder_email_required">E-mail é obrigatório</string>
    <string name="act_new_credit_card_holder_name_extra">Nome *</string>
    <string name="act_new_credit_card_holder_name_extra_required">Nome é obrigatório</string>
    <string name="act_new_credit_card_holder_phone">Telefone *</string>
    <string name="act_new_credit_card_holder_phone_length">Telefone n~ao está completo</string>
    <string name="act_new_credit_card_holder_phone_required">Telefone é obrigatório</string>
    <string name="act_new_credit_card_holder_state">Estado *</string>
    <string name="act_new_credit_card_holder_state_required">Estado é obrigatório</string>
    <string name="act_new_credit_card_holder_street">Rua *</string>
    <string name="act_new_credit_card_holder_street_complement">Complemento</string>
    <string name="act_new_credit_card_holder_street_number">Número *</string>
    <string name="act_new_credit_card_holder_street_number_required">Número é obrigatório</string>
    <string name="act_new_credit_card_holder_street_required">Rua é obrigatório</string>
    <string name="act_new_credit_card_holder_surname">Sobrenome *</string>
    <string name="act_new_credit_card_holder_surname_required">Sobrenome é obrigatório</string>
    <string name="act_new_credit_card_holder_zip_code">CEP *</string>
    <string name="act_new_credit_card_holder_zip_code_length">CEP não está completo</string>
    <string name="act_new_credit_card_holder_zip_code_required">CEP é obrigatório</string>
    <string name="act_new_credit_card_name">Nome Impresso no Cartão *</string>
    <string name="act_new_credit_card_name_required">Nome Impresso no Cartão é obrigatório</string>
    <string name="act_new_credit_card_number">Nº do cartão *</string>
    <string name="act_new_credit_card_number_required">Nº do cartão é obrigatório</string>
    <string name="act_new_credit_card_success">Cartão cadastrado com sucesso!.</string>
    <string name="act_new_credit_card_title">Cadastrar cartão</string>
    <string name="act_news_description">Cadastre seu cartão de crédito e concentre-se no treino. Com o pagamento automático você tem tudo na palma da mão.</string>
    <string name="act_news_not_now">AGORA NÃO</string>
    <string name="act_news_title">"O CONTROLE
DE SUA
ADESÃO NAS
SUAS MÃOS"</string>
    <string name="act_post_title">post</string>
    <string name="act_post_txt_hint">o que você quer falar?</string>
    <string name="act_profile_address">Endereço*</string>
    <string name="act_profile_address_number">Número*</string>
    <string name="act_profile_birthday">Data de nascimento*</string>
    <string name="act_profile_box">Box</string>
    <string name="act_profile_city">Cidade*</string>
    <string name="act_profile_complement">Complemento</string>
    <string name="act_profile_cpf">CPF</string>
    <string name="act_profile_district">Bairro*</string>
    <string name="act_profile_editar">editar</string>
    <string name="act_profile_email">E-mail*</string>
    <string name="act_profile_gender">Sexo*</string>
    <string name="act_profile_last_name">Sobrenome*</string>
    <string name="act_profile_msg_validfilds_birthday">Ops!! Acho que você não preencheu sua data de nascimento</string>
    <string name="act_profile_msg_validfilds_box">Ops!! Acho que você não selecionou um box válido</string>
    <string name="act_profile_msg_validfilds_city">Ops!! Acho que você não preencheu sua cidade</string>
    <string name="act_profile_msg_validfilds_cpf">Ops!! Você deve inserir um número de cpf válido.</string>
    <string name="act_profile_msg_validfilds_email">Ops!! Acho que você não preencheu o e-mail</string>
    <string name="act_profile_msg_validfilds_gender">Ops!! Acho que você não preencheu seu gênero</string>
    <string name="act_profile_msg_validfilds_name">Ops!! Acho que você não preencheu o nome</string>
    <string name="act_profile_msg_validfilds_passowrd">Ops!! Acho que você não preencheu a senha corretamente, certifique-se que ela esta preenchida e posui mais de 6 caracteres</string>
    <string name="act_profile_name">Nome*</string>
    <string name="act_profile_nickname">Como quer ser chamado(a)?</string>
    <string name="act_profile_phone">Telefone</string>
    <string name="act_profile_rg">RG</string>
    <string name="act_profile_save">Atualizar</string>
    <string name="act_profile_state">Estado*</string>
    <string name="act_profile_title">editar perfil</string>
    <string name="act_profile_weight">Peso</string>
    <string name="act_profile_zipcode">CEP*</string>
    <string name="act_register_address">Endereço*</string>
    <string name="act_register_address_number">Número*</string>
    <string name="act_register_birthday">Data de nascimento*</string>
    <string name="activity_membership_details_end">Fim</string>
    <string name="activity_membership_details_recurrence">Recorrência</string>
    <string name="activity_membership_details_session">Sessões</string>
    <string name="activity_membership_details_start">Início</string>
    <string name="app_name">CrossX</string>
    <string name="dialog_privacy_policy_link">Políticas de privacidade</string>
    <string name="dialog_term_button_confirm">Li e concordo</string>
    <string name="dialog_term_description">"Para continuar a usar nosso aplicativo, é necessário que você aceite os termos e políticas.

Você pode acessá-los clicando nos links abaixo:"</string>
    <string name="dialog_term_link">Termos de uso</string>
    <string name="dialog_term_title">Termos e Políticas de Privacidade</string>
    <string name="dialog_text_close">fechar</string>
    <string name="dialog_text_converter">conversor</string>
    <string name="emon">EMOM</string>
    <string name="global_continue">Continuar</string>
    <string name="init_timer">INICIAR TIMER</string>
    <string name="kg_text">kg:</string>
    <string name="lbs_text">lbs:</string>
    <string name="minutes">MINUTOS</string>
    <string name="progress">Progressivo</string>
    <string name="regress">Regressivo</string>
    <string name="seconds">SEGUNDOS</string>
    <string name="stopwatch">STOPWATCH</string>
    <string name="tabata">TABATA</string>
    <string name="text_cancel">cancelar</string>
    <string name="text_categore">Categoria</string>
    <string name="text_comment">Comentário</string>
    <string name="text_date">Data</string>
    <string name="text_description">Descrição</string>
    <string name="text_not_result">Sem resultado</string>
    <string name="text_repetitions">Repetições:</string>
    <string name="text_save">salvar</string>
    <string name="text_time_placeholder">00:00:00</string>
    <string name="time">TEMPO</string>
    <string name="timer">TIMER</string>
    <string name="type">TIPO</string>
</resources>