<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <TextView android:textSize="15.0sp" android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_marginBottom="5.0dip" android:text="@string/text_categore" />
        <Button android:gravity="left" android:id="@id/button_set_categotie" android:background="#ffaeaeae" android:layout_width="fill_parent" android:layout_height="50.0dip" />
        <TextView android:textSize="15.0sp" android:textColor="#ff000000" android:id="@id/label_type" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_marginBottom="5.0dip" android:text="@string/text_date" />
        <EditText android:textSize="15.0sp" android:textColor="#ff212121" android:layout_gravity="center_horizontal" android:id="@id/editTextResult" android:background="#ffaeaeae" android:layout_width="fill_parent" android:layout_height="50.0dip" android:hint="00:00:00" android:inputType="number" />
        <TextView android:textSize="15.0sp" android:textColor="#ff000000" android:id="@id/label_type_repetition" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_marginBottom="5.0dip" android:text="@string/text_repetitions" />
        <EditText android:textSize="15.0sp" android:textColor="#ff212121" android:layout_gravity="center_horizontal" android:id="@id/editTextRepetitions" android:background="#ffaeaeae" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="50.0dip" android:hint="" android:inputType="number" />
        <TextView android:textSize="15.0sp" android:textColor="#ff212121" android:id="@id/label_time_or_carga" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_marginBottom="5.0dip" android:text="@string/text_description" />
        <EditText android:textSize="15.0sp" android:textColor="#ff212121" android:gravity="center|left|top" android:id="@id/editTextDescription" android:background="#ffaeaeae" android:layout_width="fill_parent" android:layout_height="100.0dip" android:inputType="textMultiLine" />
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:paddingLeft="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip">
            <Button android:id="@id/button_check_not_result" android:background="@drawable/shape_button_select_user" android:layout_width="20.0dip" android:layout_height="20.0dip" android:layout_marginRight="20.0dip" android:layout_alignParentRight="true" />
            <TextView android:textSize="15.0sp" android:textColor="#ff212121" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_not_result" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:weightSum="2.0">
            <Button android:id="@id/button_add_result_cancel" android:background="@android:color/transparent" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/text_cancel" android:layout_weight="1.0" />
            <Button android:id="@id/button_add_result_confirm" android:background="@android:color/transparent" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/text_save" android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>