<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="center_vertical" android:orientation="vertical" android:background="@color/color_background_timer" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:textSize="15.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/button_stopwatch" android:background="@drawable/hexagon_stopwatch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="-30.0dip" android:src="@drawable/hexagon_stopwatch" android:text="@string/stopwatch" android:layout_centerHorizontal="true" />
    <Button android:textSize="15.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/button_timer" android:background="@drawable/hexagon_timer" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="-60.0dip" android:text="@string/timer" android:layout_toLeftOf="@id/button_stopwatch" android:layout_below="@id/button_stopwatch" />
    <Button android:textSize="15.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/button_emon" android:background="@drawable/hexagon_emom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="72.0dip" android:text="@string/emon" android:layout_toRightOf="@id/button_timer" android:layout_below="@id/button_stopwatch" android:layout_toEndOf="@id/button_timer" />
    <Button android:textSize="15.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/button_tabata" android:background="@drawable/hexagon_tabata" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="-30.0dip" android:text="@string/tabata" android:layout_below="@id/button_timer" android:layout_centerHorizontal="true" />
</RelativeLayout>