<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="14.0sp" android:textColor="#ff148fef" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginTop="24.0dip" android:layout_marginRight="24.0dip" android:text="@string/dialog_term_title" android:fontFamily="@font/open_sans_bold" android:textAlignment="center" android:layout_marginHorizontal="24.0dip" />
    <TextView android:textSize="12.0sp" android:textColor="#ff1e1e1e" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginTop="24.0dip" android:layout_marginRight="24.0dip" android:text="@string/dialog_term_description" android:fontFamily="@font/open_sans" android:textAlignment="center" android:layout_marginHorizontal="24.0dip" />
    <TextView android:textSize="12.0sp" android:textColor="#ff148fef" android:autoLink="all" android:linksClickable="true" android:id="@id/text_view_term" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginTop="24.0dip" android:layout_marginRight="24.0dip" android:text="@string/dialog_term_link" android:selectAllOnFocus="true" android:fontFamily="@font/open_sans" android:textAlignment="center" android:layout_marginHorizontal="24.0dip" />
    <TextView android:textSize="12.0sp" android:textColor="#ff148fef" android:autoLink="all" android:linksClickable="true" android:id="@id/text_view_privacy_policy" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginTop="4.0dip" android:layout_marginRight="24.0dip" android:text="@string/dialog_privacy_policy_link" android:selectAllOnFocus="true" android:fontFamily="@font/open_sans" android:textAlignment="center" android:layout_marginHorizontal="24.0dip" />
    <Button android:textSize="12.0sp" android:textColor="@color/white" android:id="@id/button_confirm" android:background="#ff148fef" android:padding="11.0dip" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/dialog_term_button_confirm" android:fontFamily="@font/open_sans_semibold" />
</LinearLayout>