<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ffffffff" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/text_medium" android:textColor="@color/gray" android:id="@id/kg_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/kg_text" android:layout_below="@id/line" />
    <TextView android:gravity="center_vertical" android:id="@id/text_dialog_kg" android:background="@color/gray_ligth" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_marginTop="@dimen/margin_small" />
    <TextView android:textSize="@dimen/text_medium" android:textColor="@color/gray" android:id="@id/lbs_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_medium" android:text="@string/lbs_text" />
    <TextView android:gravity="center_vertical" android:id="@id/text_dialog_lbs" android:background="@color/gray_ligth" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_marginTop="@dimen/margin_small" />
    <LinearLayout android:orientation="horizontal" android:background="#ff999999" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:weightSum="2.0">
        <Button android:id="@id/bt_dialog_conversror" android:background="#ffffffff" android:layout_width="0.0dip" android:layout_height="50.0dip" android:layout_marginRight="0.5dip" android:text="@string/dialog_text_converter" android:layout_weight="1.0" style="?android:borderlessButtonStyle" />
        <Button android:id="@id/bt_dialog_conversror_close" android:background="#ffffffff" android:layout_width="0.0dip" android:layout_height="50.0dip" android:text="@string/dialog_text_close" android:layout_weight="1.0" style="?android:borderlessButtonStyle" />
    </LinearLayout>
</LinearLayout>